[gd_scene load_steps=30 format=3 uid="uid://cj7nkx64m0pnn"]

[ext_resource type="Script" uid="uid://b3n8fjpkijko1" path="res://scene/player_unit/player_unit.gd" id="1_8tlxt"]
[ext_resource type="Resource" uid="uid://dl5hisb5bj65d" path="res://scene/player_unit/soldier_player_unit/soldier_unit.tres" id="2_n5i2f"]
[ext_resource type="Script" uid="uid://b0u0xwmup34dm" path="res://scene/component/health/health_component.gd" id="3_n5i2f"]
[ext_resource type="Texture2D" uid="uid://1ngfs6pcnts0" path="res://scene/player_unit/soldier_player_unit/sprite/Warrior_Attack1.png" id="3_wvuot"]
[ext_resource type="Texture2D" uid="uid://d3t7be8jqq4sk" path="res://scene/player_unit/soldier_player_unit/sprite/Warrior_Idle.png" id="4_1jf2x"]
[ext_resource type="PackedScene" uid="uid://dl2pettpfw6hl" path="res://scene/component/attack/attack_component.tscn" id="5_n5i2f"]
[ext_resource type="PackedScene" uid="uid://dd335q0u1mvkl" path="res://scene/component/hit/hit_component.tscn" id="6_coe7g"]
[ext_resource type="PackedScene" uid="uid://capn38habwmjf" path="res://scene/component/hurt/hurt_component.tscn" id="7_1tsf5"]
[ext_resource type="Script" uid="uid://bwhnh3qo3pbn2" path="res://script/state_machine/node_state_machine.gd" id="8_1tsf5"]
[ext_resource type="Script" uid="uid://d1vhw5pjfw21v" path="res://scene/player_unit/idle_state.gd" id="9_bmc0t"]
[ext_resource type="Script" uid="uid://c0t66rwm6ckav" path="res://script/state_machine/state/attack_state.gd" id="11_ydi5y"]
[ext_resource type="PackedScene" uid="uid://dla26frtoget6" path="res://scene/ui/healthbar/health_bar.tscn" id="12_3m8nd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i02as"]
atlas = ExtResource("3_wvuot")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yl5r"]
atlas = ExtResource("3_wvuot")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltp0l"]
atlas = ExtResource("3_wvuot")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_otqxe"]
atlas = ExtResource("3_wvuot")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5wpe"]
atlas = ExtResource("4_1jf2x")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_krear"]
atlas = ExtResource("4_1jf2x")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_igars"]
atlas = ExtResource("4_1jf2x")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5arqu"]
atlas = ExtResource("4_1jf2x")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ybs"]
atlas = ExtResource("4_1jf2x")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f76f"]
atlas = ExtResource("4_1jf2x")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bimrh"]
atlas = ExtResource("4_1jf2x")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd4yq"]
atlas = ExtResource("4_1jf2x")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_e2uy1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i02as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yl5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltp0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otqxe")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5wpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krear")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igars")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5arqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7ybs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f76f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bimrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd4yq")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ty0gu"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8ayyg"]
radius = 121.0661

[sub_resource type="CircleShape2D" id="CircleShape2D_n5i2f"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6tgj7"]
radius = 24.0

[node name="SoldierPlayerUnit" type="CharacterBody2D" groups=["player_unit_ground"]]
scale = Vector2(0.25, 0.25)
collision_mask = 2
script = ExtResource("1_8tlxt")
base_stats = ExtResource("2_n5i2f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_e2uy1")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -24)
shape = SubResource("CircleShape2D_ty0gu")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_n5i2f")
metadata/_custom_type_script = "uid://b0u0xwmup34dm"

[node name="AttackComponent" parent="." instance=ExtResource("5_n5i2f")]
position = Vector2(0, -32)
scale = Vector2(0.72388065, 0.56388)
collision_layer = 0
collision_mask = 2
enemy_groups = Array[String](["ground_enemy"])

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent"]
shape = SubResource("CircleShape2D_8ayyg")
debug_color = Color(0.6759988, 0.47235125, 0.5006987, 0.41960785)

[node name="HitComponent" parent="." instance=ExtResource("6_coe7g")]
collision_layer = 256
collision_mask = 16
destroyOnCollision = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitComponent"]
shape = SubResource("CircleShape2D_n5i2f")

[node name="HurtComponent" parent="." instance=ExtResource("7_1tsf5")]
position = Vector2(0, 8)
scale = Vector2(1, 1.319997)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(-4, -24)
shape = SubResource("CircleShape2D_6tgj7")
debug_color = Color(0.93549144, 0.1556527, 0.50861675, 0.41960785)

[node name="NodeStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("8_1tsf5")
initial_node_state = NodePath("Idle")
metadata/_custom_type_script = "uid://bwhnh3qo3pbn2"

[node name="Idle" type="Node" parent="NodeStateMachine"]
script = ExtResource("9_bmc0t")

[node name="Attack" type="Node" parent="NodeStateMachine" node_paths=PackedStringArray("attack_component", "hit_component", "animated_sprite_2d")]
script = ExtResource("11_ydi5y")
attack_component = NodePath("../../AttackComponent")
hit_component = NodePath("../../HitComponent")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="HealthBar" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("12_3m8nd")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -96.0
offset_right = -11.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
health_component = NodePath("../HealthComponent")

[connection signal="onAttacked" from="AttackComponent" to="NodeStateMachine/Idle" method="_on_attack_component_on_attacked"]
